--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,15 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# compiled output
+/bin
+/.idea
+/obj
+
+
+# System Files
+.DS_Store
+Thumbs.db
